<resources>
    <string name="app_name">Hey Mate</string>
    <string name="splash_text">Let\'s unite together to make our habitat a cynosure!</string>
    <string name="login">Login</string>


    <!-- Dashboard page-->
    <string name="nav_header_desc">Navigation menu in dashboard</string>
    <string name="join_apartment">Join Apartment</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="notice_board">Notice Board</string>
    <string name="local_services">Local Services</string>
    <string name="flat_members">Flat Members</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="committee_members">Comittee Members</string>
    <string name="maintenance">Maintenance</string>
    <string name="dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Navigation Open</string>
    <string name="navigation_drawer_close">Navigation close</string>

    <!--Login -->
    <string name="launch_login">Launch Login</string>
    <string name="hey">Hey</string>
    <string name="mate">Mate</string>
    <string name="username_hint">Email/ Phone number</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Sign Up-->
    <string name="_try">Try</string>
    <string name="everyfield">Everyfield</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone Number</string>
    <string name="cnfrmpassword_hint">Confirm Password</string>

    <!--Forgot Password-->
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="give">Give</string>
    <string name="best">Best</string>
    <string name="hint_full_name">Name</string>


    <!-- Add Apartment -->
    <string name="add">Add</string>
    <string name="apartment">Apartment</string>
    <string name="name">Name</string>
    <string name="apartmentname_hint">Apartment Name</string>
    <string name="street_hint">Street</string>
    <string name="area_hint">Area/ Locality</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="pin_hint">Pin Code</string>
    <string name="secretary_hint">Secretary Name</string>
    <string name="secretaryPhone_hint">Secretary Phone Number</string>
    <string name="save">Save</string>

    <!--Add service-->
    <string name="service">Service</string>
    <string name="gender">Gender :</string>
    <string name="address_hint">Address</string>
    <string name="fabric_key" templateMergeStrategy="preserve" translatable="false">AAAAT8_-Fic:APA91bE9jgY-yRRr2TfA1WAlPO0q3obWuqn_GyU_DH14jjNwFMuj00Q6GEaApjocSQ2GZsNXQIl0hiN6b8NFG__CCKaOT3KCyDBEjlh8o-uvvwGNoHXVrZ2j1SHz6w0I7ANVn8</string>
    <string-array name="services_list">
        <item>Electrician</item>
        <item>Plumber</item>
        <item>House Keeping</item>
        <item>Cook</item>
        <item>Maid</item>
        <item>Carpenter</item>
    </string-array>
</resources>
