<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    android:weightSum="1">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/city_scape_one" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="0.9">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:src="@drawable/medicalhistory" />

                <com.heymate.reckon.custom.HMTextView
                    style="@style/dashboardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notice_board"
                    app:fontName="Medium" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:src="@drawable/vacuum_cleaner" />

                <com.heymate.reckon.custom.HMTextView
                    style="@style/dashboardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_services"
                    app:fontName="Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:src="@drawable/conversation" />

                <com.heymate.reckon.custom.HMTextView
                    style="@style/dashboardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flat_members"
                    app:fontName="Medium" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="0.9">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:src="@drawable/all_time_support" />

                <com.heymate.reckon.custom.HMTextView
                    style="@style/dashboardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emergency_contacts"
                    app:fontName="Medium" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:src="@drawable/team" />

                <com.heymate.reckon.custom.HMTextView
                    style="@style/dashboardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/committee_members"
                    app:fontName="Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:src="@drawable/money" />

                <com.heymate.reckon.custom.HMTextView
                    style="@style/dashboardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maintenance"
                    app:fontName="Medium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>