<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SignInActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_size"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16">

            <LinearLayout
                android:id="@+id/tv_hey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">

                <include layout="@layout/template_heading" />
            </LinearLayout>

            <com.heymate.reckon.custom.HMEditText
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_hey"
                android:background="@drawable/curved_button_background"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/dimen_7"
                android:hint="@string/username_hint"
                android:padding="@dimen/dimen_15"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textsize_14"
                app:fontName="Roman" />

            <com.heymate.reckon.custom.HMPasswordEditText
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_username"
                android:layout_marginTop="@dimen/dimen_15"
                android:background="@drawable/curved_button_background"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="@dimen/dimen_7"
                android:hint="@string/password_hint"
                android:padding="@dimen/dimen_15"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textsize_14"
                app:fontName="Roman"
                app:useStrikeThrough="true" />

            <com.heymate.reckon.custom.HMTextView
                android:id="@+id/tv_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_password"
                android:layout_marginTop="@dimen/dimen_15"
                android:onClick="onClickForgotPassword"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textsize_18"
                app:fontName="Bold" />

            <ImageView
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgot_pwd"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dimen_15"
                android:onClick="onClickSubmit"
                android:src="@drawable/login_arrow" />
        </RelativeLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>